// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-chip should render label when provided 1`] = `
<modus-wc-chip label="Test Label">
  <!---->
  <button aria-label="Labeled chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
    <span class="modus-wc-chip-label">
      Test Label
    </span>
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render remove icon when showRemove is true 1`] = `
<modus-wc-chip show-remove="true">
  <!---->
  <button aria-label="Close chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
    <modus-wc-icon aria-label="Remove chip" custom-class="modus-wc-chip-remove-icon" name="close"></modus-wc-icon>
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with circle shape 1`] = `
<modus-wc-chip shape="circle">
  <!---->
  <button aria-label="Circle chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip modus-wc-chip--circle" tabindex="0" type="button">
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with content in the primary slot 1`] = `
<modus-wc-chip>
  <!---->
  <button aria-label="Slotted chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
    <span>
      Slot content
    </span>
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with custom props 1`] = `
<modus-wc-chip active="true" custom-class="test-class" size="lg" variant="outline">
  <!---->
  <button aria-label="Custom chip" class="modus-wc-btn modus-wc-btn-lg modus-wc-chip modus-wc-chip--active modus-wc-chip--outline test-class" tabindex="0" type="button">
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with default props 1`] = `
<modus-wc-chip>
  <!---->
  <button aria-label="Default chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with disabled attribute 1`] = `
<modus-wc-chip disabled="true">
  <!---->
  <button aria-disabled="" aria-label="Disabled chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip modus-wc-chip--disabled" disabled="" tabindex="0" type="button">
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with hasError prop 1`] = `
<modus-wc-chip has-error="true">
  <!---->
  <button aria-label="Error chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip modus-wc-chip--error" tabindex="0" type="button">
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with label and remove icon together 1`] = `
<modus-wc-chip label="Removable" show-remove="true">
  <!---->
  <button aria-label="Label with remove" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
    <span class="modus-wc-chip-label">
      Removable
    </span>
    <modus-wc-icon aria-label="Remove chip" custom-class="modus-wc-chip-remove-icon" name="close"></modus-wc-icon>
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with small size 1`] = `
<modus-wc-chip size="sm">
  <!---->
  <button aria-label="Small chip" class="modus-wc-btn modus-wc-btn-sm modus-wc-chip" tabindex="0" type="button">
  </button>
</modus-wc-chip>
`;
